Revert "feat: upgrade to Spring Boot 4.0.4 and Jackson 3 (#888)"
This reverts commit e06f84fcf52128d850109224c276e29968b2a683.